--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     image: mysql:8.0
     container_name: mysql
     restart: always
+    env_file:
+      - .env
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DATABASE}
@@ -15,7 +17,7 @@ services:
     volumes:
       - ./docker/config/mysql/init.sql:/docker-entrypoint-initdb.d/1-init.sql
       - ./docker/config/mysql/schema.sql:/docker-entrypoint-initdb.d/2-schema.sql
-      - ./docker/config/mysql/baseData.sql:/docker-entrypoint-initdb.d/3-baseData.sql
+      - ./docker/config/mysql/initData.sql:/docker-entrypoint-initdb.d/3-initData.sql
       - mysql_data:/var/lib/mysql
     command:
       - --character-set-server=utf8mb4
@@ -27,6 +29,8 @@ services:
     image: redis:8.0
     container_name: redis
     restart: always
+    env_file:
+      - .env
     ports:
       - "6379:6379"
     volumes:
@@ -39,6 +43,8 @@ services:
     image: redis:8.0
     depends_on:
       - redis
+    env_file:
+      - .env
     environment:
       REDIS_PASSWORD: ${REDIS_PASSWORD}
     entrypoint: >
@@ -55,6 +61,8 @@ services:
     image: mongo:6.0
     container_name: mongo
     restart: always
+    env_file:
+      - .env
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
@@ -72,6 +80,8 @@ services:
     image: minio/minio:RELEASE.2025-09-07T16-13-09Z
     container_name: mixchat-minio
     restart: unless-stopped
+    env_file:
+      - .env
     environment:
       MINIO_ROOT_USER: ${MINIO_ROOT_USER}
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
