--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,8 +1,10 @@
 spring:
+  config:
+    import: optional:classpath:application-secret-default.yml,optional:classpath:application-secret.yml
   datasource:
     url: jdbc:mysql://localhost:3306/${MYSQL_TEST_DATABASE:mysql_test}
-    username: ${MYSQL_TEST_USER:${MYSQL_USER}}
-    password: ${MYSQL_TEST_PASSWORD:${MYSQL_PASSWORD}}
+    username: ${MYSQL_TEST_USER:${MYSQL_USER:root}}
+    password: ${MYSQL_TEST_PASSWORD:${MYSQL_PASSWORD:${MYSQL_ROOT_PASSWORD:rootpw}}}
   jpa:
     properties:
       hibernate:
@@ -13,7 +15,22 @@ spring:
     mongodb:
       uri: mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@localhost:27017/${MONGO_TEST_DB:mongo_test}
     redis:
-      host: ${REDIS_HOST}
-      port: ${REDIS_PORT}
-      password: ${REDIS_PASSWORD}
+      host: ${REDIS_HOST:localhost}
+      port: ${REDIS_PORT:6379}
+      password: ${REDIS_PASSWORD:redispass}
 
+minio:
+  endpoint: http://localhost:9000
+  access-key: minio-key
+  secret-key: minio-secret
+  bucket-name: test-bucket
+
+cloud:
+  aws:
+    credentials:
+      access-key: aws-key
+      secret-key: aws-secret
+    region:
+      static: ap-northeast-2
+    s3:
+      bucket: test-bucket
