--- a/src/main/resources/application-staging.yml
+++ b/src/main/resources/application-staging.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT:3306}/${MYSQL_DATABASE}
+    url: jdbc:mysql://localhost:3306/${MYSQL_DATABASE}
     username: ${MYSQL_USER}
     password: ${MYSQL_PASSWORD}
   jpa:
@@ -28,7 +28,7 @@ logging:
     com.back: INFO
 custom:
   site:
-    cookieDomain: "${custom.prod.cookieDomain}"
-    frontUrl: "${custom.prod.frontUrl}"
-    backUrl: "${custom.prod.backUrl}"
+    cookieDomain: "${custom.staging.cookieDomain}"
+    frontUrl: "${custom.staging.frontUrl}"
+    backUrl: "${custom.staging.backUrl}"
     name: mixchat
