--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -108,7 +108,10 @@ management:
         http.server.requests: true
 
 cors:
-  allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:3000}
+  allowed-origins:
+    - "http://localhost:3000"      # 로컬 개발용 (React/Vue 등)
+    - "https://mixchat.site"       # 실제 프론트엔드 배포 주소
+    - "https://www.mixchat.site"   # (필요시) www 포함 주소
 
 server:
   port: 8080
